--- a/frontend/src/Log.css
+++ b/frontend/src/Log.css
@@ -2,6 +2,14 @@ body
 {
   margin:0;
 }
+.log_row1_out{
+  background-color: #504444;
+  
+  display: flex;
+  flex-direction: column;
+  /*margin: 50px 15%;*/
+  padding: 130px;
+}
 .log_row1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 2rem;
@@ -12,6 +20,9 @@ body
       padding-top: 70px;
       padding-right: 30%;
    
+}
+.log_label{
+  padding-right: 250px;
 }
 .log_row2{
     font-size: 1.3rem;
