--- a/frontend/src/Log.css
+++ b/frontend/src/Log.css
@@ -7,22 +7,31 @@ body
   
   display: flex;
   flex-direction: column;
-  /*margin: 50px 15%;*/
+  justify-items: center;
+  
   padding: 130px;
 }
 .log_row1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 2rem;
     align-items: center;
-      background-color: rgb(246, 245, 244);
-      display: flex;
+    background-color: rgb(246, 245, 244);
+       display: flex;
       flex-direction: column;
-      padding-top: 70px;
-      padding-right: 30%;
-   
+      padding-top: 10px;
+     /*padding-right: 20%;*/
+     margin: 1px 25%;
+    /* border-bottom: 10px;*/
 }
 .log_label{
-  padding-right: 250px;
+  padding-right: 350px;
+ 
+}
+.label_line{
+  width: 100%;
+ /* height: 2px;*/
+  border-top: 1px solid black;
+  /*line-height: 50%;*/
 }
 .log_row2{
     font-size: 1.3rem;
